# fiberrcc

./: .gitignore  README.md  check.py  pyproject.toml  requirements.txt  setup.cfg
configs/: base_fiber_rcnn.yaml  fiber_rcnn_convnext_tiny.yaml  fiber_rcnn_r101_fpn.yaml  fiber_rcnn_r50_fpn.yaml  fiber_rcnn_r50_fpn_boxes_only.yaml  fiber_rcnn_r50_fpn_boxes_tuned.yaml  fiber_rcnn_r50_fpn_rpn_tune_c.yaml  fiber_rcnn_r50_fpn_thin_fiber.yaml  fiber_rcnn_swin_s.yaml  fiber_rcnn_swin_t.yaml
data/coco_fiber/: test.json  train.json  val.json
data/coco_fiber_v2/: all.json  test.json  train.json  val.json
data/coco_fiber_v3/: test.json  train.json  val.json  visualizer.py
data/raw/: 1_0002.json  1_0004.json  1_0006.json  1_0008.json  1_0010.json  1_0012.json  2_0002.json  2_0006.json  2_0008.json  2_0010.json  2_0012.json  Picture1.json  Picture1.tif  Picture2.json  Picture2.tif  Picture3.json  Picture3.tif  Picture33.json  Picture33.tif  Picture34.json  Picture34.tif  Picture35.json  Picture35.tif  Picture36.json  Picture36.tif  Picture41.json  Picture41.tif  Picture42.json  Picture42.tif  Picture43.json  Picture43.tif  Picture44.json  Picture44.tif  Picture45.json  Picture45.tif  Picture46.json  Picture46.tif  Picture47.json  Picture47.tif  Picture48.json  (+5 more)
eval/run09/: metrics.json
eval/run10_after_mask_fix/: metrics.json
eval/run10_full_heads_matched/: metrics.json
eval/run11_boxes_only_val/: metrics.json
eval/run11_boxes_only_val_matched/: metrics.json
eval/run12_boxes_tuned_val/: metrics.json
eval/run13_full_heads_kpfix/: metrics.json
eval/run14_full_heads_kpsigmoid/: metrics.json
eval/run15_full_heads_orderfix/: metrics.json
eval/run_debug_std_mask_std_kp_small/: proposal_recall.json
eval/run_rpn_tune_c_ckpt_final/: proposal_recall.json
eval/run_rpn_tune_c_ckpt_final_correct/: proposal_recall.json
eval/run_rpn_tune_c_ckpt_final_exact/: metrics.json
eval/run_rpn_tune_c_ckpt_iter200/: proposal_recall.json
eval/run_rpn_tune_c_ckpt_iter200_correct/: proposal_recall.json
eval/run_rpn_tune_c_ckpt_iter200_exact/: metrics.json
fiberrcnn/: __init__.py
fiberrcnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fiberrcnn/data/: __init__.py  augmentation.py  converter.py  dataset_mapper.py
fiberrcnn/engine/: __init__.py  amp_trainer_copy.py  inference.py  trainer.py
fiberrcnn/evaluation/: __init__.py  fiber_evaluator.py
fiberrcnn/geometry/: __init__.py  fiber_geometry.py
fiberrcnn/modeling/: __init__.py
fiberrcnn/morphology/: __init__.py  fiber_morphology.py  pore_analysis.py
fiberrcnn/utils/: __init__.py  logging.py  misc.py  scale_calibration.py
fiberrcnn/visualization/: __init__.py  fiber_viz.py
output/: text.txt
output/infer_rpn_tune_c_iter200_sample/: 1_0002_prediction.json  1_0008_prediction.json  Picture43_prediction.json  Picture46_prediction.json
output/run10/: log.txt  (+4 more)
tests/: conftest.py  test_augmentation.py  test_converter.py  test_evaluation.py  test_geometry.py  test_heads.py  test_inference.py  test_losses.py  test_morphology.py  test_pore_analysis.py  test_scale_calibration.py  test_visualization.py
tools/: convert_dataset.py  debug_forward.py  debug_proposals.py  evaluate.py  export_onnx.py  infer.py  train.py  visualize_dataset.py
(+142 files in other folders)
