[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fiberrcnn"
version = "2.0.0"
description = "Advanced Scientific Nanofiber Analysis Framework using Detectron2"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "FiberRCNN Contributors" }]
keywords = ["nanofiber", "SEM", "instance-segmentation", "detectron2", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "detectron2>=0.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "shapely>=2.0.0",
    "pycocotools>=2.0.6",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "fvcore>=0.1.5",
    "iopath>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[project.scripts]
fiberrcnn-train = "tools.train:main"
fiberrcnn-infer = "tools.infer:main"
fiberrcnn-eval = "tools.evaluate:main"
fiberrcnn-convert = "tools.convert_dataset:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fiberrcnn*", "tools*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true