[metadata]
name = fiberrcnn
version = 2.0.0
description = Advanced Scientific Nanofiber Analysis Framework using Detectron2
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = FiberRCNN Contributors
keywords = nanofiber, SEM, instance-segmentation, detectron2, materials-science
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[options.packages.find]
include =
    fiberrcnn*
    tools*

[options.entry_points]
console_scripts =
    fiberrcnn-train   = tools.train:main
    fiberrcnn-infer   = tools.infer:main
    fiberrcnn-eval    = tools.evaluate:main
    fiberrcnn-convert = tools.convert_dataset:main
    fiberrcnn-viz     = tools.visualize_dataset:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.7.0
    ruff>=0.0.280
    mypy>=1.5.0

[tool:pytest]
testpaths = tests
pythonpath = .

[flake8]
max-line-length = 100
extend-ignore = E203, W503
